deployment/nginx-fabric/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-app
  namespace: amazon-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      containers:
        - name: amazon
          image: harishnshetty/amazon:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
  namespace: amazon-ns
spec:
  selector:
    app: amazon
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-app
  namespace: flipkart-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flipkart
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart
          image: harishnshetty/flipkart:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-service
  namespace: flipkart-ns
spec:
  selector:
    app: flipkart
  ports:
    - port: 80
      targetPort: 80
