deployment/nginx-fabric/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: public-https
      port: 80
      protocol: HTTP
      hostname: "*.harishshetty.xyz"
      allowedRoutes:
        namespaces:
          from: All
        # namespaces:
        #   from: Selector
        #   selector:
        #     matchLabels:
        #       gateway-access: "true"
